<resources>
    <string name="app_name">Coop VAGH</string>
    <string name="textMiCuenta">Mi Cuenta</string>
    <string name="textNombrecuenta">Nombre Cuenta</string>
    <string name="textMovimientos2" />
    <string name="textMovimientos">Movimientos</string>
    <string name="textConsultarMovimientos">Consultar Movimientos</string>
    <string name="textBuscarDesde">Buscar desde el:</string>
    <string name="textBuscarHasta">Buscar hasta el:</string>
    <string name="editTextFechaDesdeHint">10/01/2021</string>
    <string name="buttonTextConsultarXFecha">Consultar Por Fecha</string>
    <string name="textInformacion">Puedes consultar tus movimientos de los últimos 60 días</string>
    <string name="txtNombreCuenta">Nombre Cuenta</string>
    <string name="txtNoCuenta">No. XXXXXXXXXXX</string>
    <string name="txtSaldoDisp">Saldo Disponible</string>
    <string name="txtValorSaldo" />
    <string name="txtSaldoValor">$ 3.00</string>
    <string name="txtUltimosMOv">Últimos Movimientos</string>
    <string name="textSaldoValor2">$ 32.00</string>
    <string name="stringTextUser">Usuario:</string>
    <string name="hintVacio" />
    <string name="textPass">Contraseña:</string>
    <string name="taxtIngresar">Ingresar</string>
    <string name="textRegistrarse" />
    <string name="textRegistro">Registrarse</string>
    <string name="textSaludoUsuario">Hola Usuario</string>
    <string name="textVerMov">Ver Movimientos</string>
    <string name="textNecitasMoney">¿Necesitas un Crédito?</string>
    <string name="textSolicitarCred">Solicitar Crédito</string>
    <string name="textPagar">Pagar Cuota Crédito</string>
    <string name="textCredito">Créditos</string>
    <string name="textDatosCred">Datos del Crédito</string>
    <string name="textSolicitar">Solicitar</string>
    <string name="textAbonar">Abonar Crédito</string>
    <string name="textAbonarc">Abonar</string>
    <string name="textAbo">Abono:</string>
    <string name="textValAbono">$ 10.50</string>
    <string name="textPerfil">Mi Perfil</string>
    <string name="textNombres">Nombre1 Nombre2</string>
    <string name="textApellidos">Apellido1 Apellido2</string>
    <string name="textModificar">Modificar</string>
    <string name="textCorreo">CorreoElectrónico</string>
    <string name="textCorreo2">*****???@gmail.com</string>
    <string name="textClave">Calve de Acceso</string>
    <string name="textPass1">***********</string>
    <string name="textContac">Contáctanos</string>
    <string name="textMapa">MAPA</string>
    <string name="texCheckBoxRecordoarme">Recuerdame</string>
    <string name="title_activity_maps">Map</string>
    <string name="editTextTextEmailAddress_hint">Ingrese su usuario</string>
    <string name="email_NoValido">Usuario no valido</string>
    <string name="editTextPassword_hint">Ingrese su contraseña</string>
    <string name="password_longitudNoValida">La contraseña debe de ser de minimo de 8 caracteres</string>
    <string name="textRegistroUsuario">Usuario</string>
    <string name="textRegistroContraseña">Contraseña</string>
    <string name="textRegistroContraseña2">Contraseña</string>
    <string name="password_noidenty">Las contraseñas no coinciden</string>

</resources>